Add schedule configuration
